--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,9 @@
     width: 80%;
     float: left;
     margin-bottom: 6%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around
 }
 
 #cabecalhologo {
@@ -28,8 +31,9 @@
 #cabecalhotext {
     margin: 5% 0% 5% 0%;
 }
-#cabecalhotext > h2 {
+#cabecalhotext > h1 {
     color: white;
+    text-decoration: underline 1px;
 }
 
 
@@ -42,6 +46,7 @@
 #c{
     flex-wrap: wrap;
     display: flex;
+    justify-content: center;
     background-color: rgba(225, 225, 230, 0.65);
     margin: 0% 10%;
     padding: 1% 0%;
@@ -51,19 +56,46 @@
     border-radius: 8px;
 }
 
+#imagemprincipal > img{
+    width: 60%;
+}
+
 #c1 {
     flex: 100%;
+}
+
+#c1 > p {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+#servicos {
+    background-color: rgb(12, 12, 12);
+    border-radius: 20px;
+    margin: 5px 20px;
+}
+
+#servicos > p {
+    color: white;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 #galeria {
     display: flex;
     flex-direction: row;
+    align-content: space-around;
     flex-wrap: wrap;
+    justify-content: center;
     padding: 20px;
+    background-color: rgb(12, 12, 12);
+    border-radius: 20px;
+    margin: 5px 20px;
 }
 
 #galeria > img {
     width: 200px;
+    margin: 5px;
 }
 
 /*Fim do conteudo*/
